@@ -13,8 +13,14 @@ def local_appName = 'PM Home Station'
 def local_mainClassName = 'pmstation.Start'
 def local_projectUrl = 'https://github.com/rjaros87/pm-home-station'
 
-sourceCompatibility = JavaVersion.VERSION_11
-mainClassName = local_mainClassName
+java {
+    sourceCompatibility = JavaVersion.VERSION_17
+    targetCompatibility = JavaVersion.VERSION_17
+}
+
+application {
+    mainClass = local_mainClassName
+}
 
 repositories {
     mavenCentral()
@@ -29,11 +35,22 @@ configurations {
     compile.exclude module: 'fontbox'
 }
 
+// for :run task
+run {
+    jvmArgs = [
+        "--add-exports=java.desktop/com.apple.eawt=ALL-UNNAMED"
+    ]
+}
+
+compileJava {
+    options.encoding = "UTF-8"
+}
+
 shadowJar {
-    baseName = project.name
-    classifier = null
-    version = project.version
-    
+    archiveBaseName.set(project.name)
+    archiveClassifier.set(null)
+    archiveVersion.set(project.version)
+
     manifest {
         attributes 'Implementation-Title': "${local_appName} - the standalone application (uber) JAR"
         attributes 'Implementation-Version': project.version
@@ -41,20 +58,24 @@ shadowJar {
         attributes 'Built-By': System.getProperty('user.name')
         attributes 'Built-JDK': System.getProperty('java.version')
         attributes 'Build-Time': new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
+        attributes 'Add-Exports': 'java.desktop/com.apple.eawt'
     }
-    
+
     exclude 'META-INF/*.txt'
 }
 
 launch4j {
-    copyConfigurable = project.tasks.shadowJar.outputs.files
+    // https://github.com/TheBoegl/gradle-launch4j?tab=readme-ov-file#configurable-input-configuration
+    copyConfigurable = []
+    jarTask = project.tasks.shadowJar
+
     mainClassName = local_mainClassName
     icon = "${projectDir}/icons/app-icon.ico"
     outfile = "${project.name}-${project.version}.exe"
     supportUrl = local_projectUrl
     companyName = local_projectUrl
-    version = version
-    textVersion = version
+    version = project.version
+    textVersion = project.version
     productName = local_appName
     copyright = 'Copyright (C), licence: GPL-3.0'
 }
@@ -64,6 +85,8 @@ macAppBundle {
     mainClassName = local_mainClassName
     runtimeConfigurationName = 'shadow'
     jarTask = 'shadowJar'
+    appStyle = 'universalJavaApplicationStub'
+
     icon = 'icons/dmg-myIcon.icns'
     bundleJRE = false
     javaProperties.put('apple.laf.useScreenMenuBar', 'true')
@@ -92,6 +115,6 @@ dependencies {
     extraLibs group: 'com.google.code.gson', name: 'gson', version: '2.10.1'
 
     extraLibs project(':core')
-    configurations.compile.extendsFrom(configurations.extraLibs)
-    testCompile group: 'junit', name: 'junit', version: '4.13'
+    configurations.implementation.extendsFrom(configurations.extraLibs)
+    testImplementation group: 'junit', name: 'junit', version: '4.13'
 }
